# nid

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  constants.py  fly.toml  pyproject.toml  todo.txt
.github/workflows/: poubelle-reminder.yml
accounts/: decorators.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: login.html
config/: CLAUDE.md  middleware.py  settings.py  urls.py
demo/: urls.py  views.py
demo/management/commands/: generate_vapid_keys.py
demo/templates/demo/: index.html
home/: views.py
home/templates/home/: index.html
notification/: urls.py  views.py
static/: manifest.json  service-worker.js
static/css/: output.css
templates/: base.html  logged_in_base.html
templates/accounts/: password_prompt.html
